--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pinia-plugin-persist": "^1.0.0",
     "pushstate-server": "^3.1.0",
     "qs": "^6.10.3",
+    "screenfull": "^6.0.1",
     "unplugin-icons": "^0.14.3",
     "vite": "^2.9.8",
     "vite-plugin-inspect": "^0.5.0",
