--- a/package.json
+++ b/package.json
@@ -2,41 +2,33 @@
   "name": "vue3-admin",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite --mode development",
-    "build": "vite build --mode release"
+    "dev": "vite",
+    "build": "vite build"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^1.1.4",
-    "@rollup/plugin-babel": "^5.3.1",
+    "@element-plus/icons-vue": "^2.0.4",
     "axios": "^0.27.2",
-    "element-plus": "^2.2.2",
+    "element-plus": "^2.2.4",
     "js-cookie": "^3.0.1",
     "pinia": "^2.0.14",
     "pinia-plugin-persist": "^1.0.0",
-    "pushstate-server": "^3.1.0",
     "qs": "^6.10.3",
     "screenfull": "^6.0.1",
     "unplugin-icons": "^0.14.3",
-    "vite": "^2.9.8",
+    "vite": "^2.9.9",
     "vite-plugin-inspect": "^0.5.0",
-    "vue": "^3.2.33",
+    "vue": "^3.2.36",
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.0",
-    "@babel/runtime": "^7.17.9",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@vitejs/plugin-vue": "^2.3.2",
-    "@vue/compiler-sfc": "^3.2.33",
-    "babel": "^6.23.0",
-    "babel-plugin-component": "^1.1.1",
+    "@babel/core": "^7.18.2",
+    "@babel/runtime": "^7.18.3",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/compiler-sfc": "^3.2.36",
+    "@babel/cli": "^7.17.10",
     "babel-plugin-import": "^1.13.5",
-    "element-theme-chalk": "^2.15.8",
     "unplugin-auto-import": "^0.7.1",
     "unplugin-vue-components": "^0.19.3",
-    "vite": "^2.9.8",
-    "vite-babel-plugin": "^0.0.2",
-    "vite-plugin-babel-import": "^2.0.5",
     "vite-plugin-imp": "^2.1.8"
   }
 }
