1.增加dev环境的打包选项 2.精简配置项代码

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "v2.0.00",
   "scripts": {
     "dev": "vite --mode dev",
-    "build:dev": "vite build --mode dev",
-    "build:prod": "vite build --mode prod"
+    "build": "vite build --mode pro",
+    "build:dev": "vite build --mode dev"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.4",
