--- a/package.json
+++ b/package.json
@@ -7,29 +7,29 @@
     "build:dev": "vite build --mode dev"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.0.4",
+    "@element-plus/icons-vue": "^2.0.6",
     "axios": "^0.27.2",
-    "element-plus": "^2.2.8",
+    "element-plus": "^2.2.9",
     "js-cookie": "^3.0.1",
-    "pinia": "^2.0.14",
+    "pinia": "^2.0.16",
     "pinia-plugin-persist": "^1.0.0",
     "qs": "^6.10.3",
     "screenfull": "^6.0.1",
     "unplugin-icons": "^0.14.3",
-    "vue": "^3.2.36",
-    "vue-router": "^4.0.15"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.2"
   },
   "devDependencies": {
-    "vite": "^2.9.9",
-    "vite-plugin-inspect": "^0.5.0",
-    "@babel/core": "^7.18.2",
-    "@babel/runtime": "^7.18.3",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/compiler-sfc": "^3.2.36",
-    "@babel/cli": "^7.17.10",
+    "@babel/cli": "^7.18.9",
+    "@babel/core": "^7.18.9",
+    "@babel/runtime": "^7.18.9",
+    "@vitejs/plugin-vue": "^3.0.1",
+    "@vue/compiler-sfc": "^3.2.37",
     "babel-plugin-import": "^1.13.5",
-    "unplugin-auto-import": "^0.7.1",
-    "unplugin-vue-components": "^0.19.3",
-    "vite-plugin-imp": "^2.1.8"
+    "unplugin-auto-import": "^0.9.3",
+    "unplugin-vue-components": "^0.21.1",
+    "vite": "^3.0.2",
+    "vite-plugin-imp": "^2.2.0",
+    "vite-plugin-inspect": "^0.6.0"
   }
 }
