增加忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ node_modules
 
 /src/auto-imports.d.ts
 /src/components.d.ts
+src/auto-imports.d.ts
+src/components.d.ts
 ./package-lock.json
 # local env files
 .env.local
