--- a/package.json
+++ b/package.json
@@ -9,29 +9,29 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
-    "axios": "^1.6.2",
+    "axios": "^1.6.7",
     "default-passive-events": "^2.0.0",
-    "element-plus": "^2.4.2",
+    "element-plus": "^2.5.6",
     "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
     "pinia-plugin-persist": "^1.0.0",
     "qs": "^6.11.2",
     "screenfull": "^6.0.2",
-    "unplugin-icons": "^0.17.4",
-    "vue": "^3.3.8",
-    "vue-router": "^4.2.5"
+    "unplugin-icons": "^0.18.5",
+    "vue": "^3.4.19",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.23.0",
-    "@babel/core": "^7.23.3",
-    "@babel/runtime": "^7.23.2",
-    "@vitejs/plugin-vue": "^4.5.0",
-    "@vue/compiler-sfc": "^3.3.8",
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.23.9",
+    "@babel/runtime": "^7.23.9",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/compiler-sfc": "^3.4.19",
     "babel-plugin-import": "^1.13.8",
-    "unplugin-auto-import": "^0.16.7",
-    "unplugin-vue-components": "^0.25.2",
-    "vite": "^5.0.8",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "5.1.4",
     "vite-plugin-imp": "^2.4.0",
-    "vite-plugin-inspect": "^0.7.42"
+    "vite-plugin-inspect": "^0.8.3"
   }
 }
